6588
It does crash until very recently, but not in master.
{code}
// 2.10.0-20120320-201545-fcc63e2b66
scalac ./a.scala 
./a.scala:10: error: constructor Foo2 in class Foo2 cannot be accessed in object Bar2
object Bar2 { new Foo2(0, 0) }
              ^
one error found
{code}
